horizontal scroll issue fixed

--- a/app/assets/stylesheets/web/ost/index/LiquidityTokenExchange.scss
+++ b/app/assets/stylesheets/web/ost/index/LiquidityTokenExchange.scss
@@ -10,18 +10,18 @@
   }
 }
 
-@media (max-width: 768px) {
-  .liquidity-container-wrapper {
-    padding-right: 0;
-    .img-container{
-      padding-right: 0;
-      .img-position{
-        padding-right: 0;
-        margin-top: -20px;
-      }
-    }
-  }
-}
+//@media (max-width: 768px) {
+//  //.liquidity-container-wrapper {
+//  //  padding-right: 0;
+//  //  .img-container{
+//  //    padding-right: 0;
+//  //    .img-position{
+//  //      padding-right: 0;
+//  //      margin-top: -20px;
+//  //    }
+//  //  }
+//  //}
+//}
 
 
 
